--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
+  firebase_database: ^11.3.5
   google_sign_in: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
