--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_database: ^11.3.5
   google_sign_in: ^6.3.0
+  speech_to_text: ^6.5.1
+  permission_handler: ^11.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
