--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   http: ^1.1.0
   animate_do: ^3.0.2
   font_awesome_flutter: ^10.6.0
+  video_player: ^2.9.5
 
 dev_dependencies:
   flutter_test:
@@ -94,8 +95,10 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/audio/
+    - assets/sounds/
     - assets/images/
+    - assets/videos/
+    - assets/videos/intro.mp4
 
   # To add assets to your application, add an assets section, like this:
   # assets:
