--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,10 +95,15 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/sounds/
-    - assets/images/
+    - assets/audio/white-noise.mp3
+    - assets/images/focus.png
+    - assets/images/google.png
+    - assets/images/progress.png
+    - assets/images/tasks.png
     - assets/videos/
     - assets/videos/intro.mp4
+    - assets/images/logo.jpg
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
